fixed overlapping

--- a/public/css/filters_tax.css
+++ b/public/css/filters_tax.css
@@ -28,7 +28,7 @@
         display: none;
     }
 
-    .tax-toggle{
+    /* .tax-toggle{
         border: 1px solid black;
         border-radius: 1rem;
         height: 3.25rem;
@@ -36,11 +36,22 @@
         margin-left: 2rem;
         display: flex;
         align-items: center;
+    } */
+
+    .tax-toggle{
+    border: 1px solid black;
+    border-radius: 1rem;
+    height: 3.25rem;
+    padding: 1rem;
+    display: flex;
+    align-items: center;
     }
 
 
+
 @media (max-width: 767px) {
-  .container-fluid.mt-3 {
-    margin-top: 1rem !important;
+  .tax-toggle {
+    margin-left: 0;
+    width: 100%;
   }
 }
